discussion/kv_engine/159371/159371_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

add colors

Change-Id: I13c43d770b438ee9823b6da8fdef5ab7b0273705

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-08-18 07:02:04.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-18 07:43:30.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38680/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0057/0157]: startup token stat...(22 ms) OK


99% tests passed, 1 tests failed out of 402

Total Test time (real) = 1079.47 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38680/ )

Timeout of a CTest test 402/402 Test #255: ep_testsuite.ephemeral.comp_active ............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38680/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11387/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/color.cc:14:6: error: no type named "atomic_bool" in namespace "std" [clang-diagnostic-error]
std::atomic_bool color_supported{
     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11387/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/color.cc:14:6:
error: no type named "atomic_bool" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11387/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32981/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/color.cc:14:6:
error: no type named "atomic_bool" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32981/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1018/ : FAILURE

Compile error at [2021-08-18T07:03:27.255Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/utilities/color.cc:14:6:
error: no type named "atomic_bool" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1018/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13562/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13562/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10099/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1028/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12103/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12986/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13187/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21101/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
